related tags: fix layout on mobile.
Make related tags use a single-column layout on mobile.

Related tags layout is still broken inside the tag edit dialog box, when
the dialog box is too small for multiple columns.

--- a/app/javascript/src/styles/common/utilities.scss
+++ b/app/javascript/src/styles/common/utilities.scss
@@ -52,6 +52,7 @@ $spacer: 0.25rem; /* 4px */
   .md\:inline-block { display: inline-block; }
   .md\:flex { display: flex; }
 
+  .md\:space-x-4 > * + * { margin-left: 4 * $spacer; }
   .md\:space-x-8 > * + * { margin-left: 8 * $spacer; }
   .md\:space-y-0 > * + * { margin-top: 0; }
 }
